# epub-image-optimizer

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test_and_coverage.yaml  tests.yaml
epub_image_optimizer/: __main__.py  cli.py  epub_image_optimizer.py  image_optimizer.py  progress_bar.py
tests/: moby-dick_nomanifest.epub  test_cli.py  test_epub_image_optimizer.py
