[tool.poetry]
name = "epub-image-optimizer"
version = "1.2.0"
description = "Small application to optimize images (and cover) inside epub files"
authors = ["Javier Sacido <jabbo16@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jabbo16/epub-image-optimizer"
repository = "https://github.com/Jabbo16/epub-image-optimizer"
keywords = ["epub", "image", "optimizer", "cli", "tinify"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Intended Audience :: End Users/Desktop",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
tinify = "1.6.0"
Pillow = "11.1.0"
click = "^8.1.8"
lxml = "^5.3.0"
coloredlogs = "^15.0.1"
rich = "^13.9.4"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = ">=24.10,<26.0"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"
isort = ">=5.13.2,<7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
epub-image-optimizer = 'epub_image_optimizer.cli:main'

[tool.black]
target-version = ['py312', 'py313']
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
