[project]
name = "epub-image-optimizer"
version = "1.2.0"
description = "Small application to optimize images (and cover) inside epub files"
authors = [{ name = "Javier Sacido", email = "jabbo16@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "epub",
    "image",
    "optimizer",
    "cli",
    "tinify",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "tinify==1.6.0",
    "Pillow==11.1.0",
    "click>=8.1.8,<9",
    "lxml>=5.3.0,<6",
    "coloredlogs>=15.0.1,<16",
    "rich>=13.9.4,<14",
    "pyyaml>=6.0.2,<7",
]

[project.urls]
Homepage = "https://github.com/Jabbo16/epub-image-optimizer"
Repository = "https://github.com/Jabbo16/epub-image-optimizer"

[project.scripts]
epub-image-optimizer = "epub_image_optimizer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "pre-commit>=4.0.1,<5",
    "ruff>=0.9.4",
]

[tool.hatch.build.targets.sdist]
include = ["LICENSE"]

[tool.hatch.build.targets.wheel]
include = ["LICENSE"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["E501"]
